--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,8 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Minidex</title>
   </head>
-  <body>
-    <div id="root"></div>
+  <body class="flex h-screen w-full items-center justify-center">
+    <div
+      id="root"
+      class="flex h-full w-full flex-col items-center justify-center bg-zinc-900"
+    ></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
