Feat: add horizontal padding at site

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,7 @@
   <body class="flex h-screen w-full items-center justify-center">
     <div
       id="root"
-      class="flex h-full w-full flex-col items-center justify-center bg-zinc-900"
+      class="flex h-full w-full flex-col items-center bg-zinc-50 px-28"
     ></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
