Feat: change bg tp dark and set default font

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Minidex</title>
   </head>
-  <body class="flex h-screen w-full items-center justify-center">
+  <body class="flex h-screen w-full items-center justify-center font-Inter">
     <div
       id="root"
-      class="flex h-full w-full flex-col items-center bg-zinc-50 px-28"
+      class="flex h-full w-full flex-col items-center bg-zinc-900 px-28 pt-6"
     ></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
